# django_app

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_articles.py  create_author.py  create_category.py  create_tags.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py  0003_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  article_list_old_lesson.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  login.html  register.html  update-profile.html  user-details.html  (+1 more)
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  api.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  user-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_product_created_by.py  0004_alter_product_created_by.py  0005_order_receipt.py  0006_product_preview.py  0007_productimage.py  0008_alter_order_options_alter_product_options_and_more.py
(+26 files in other folders)
