[project]
name = "python-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur_Lazarevich",email = "compact20002008@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.2)",
    "django-rest-framework (==0.1.0)",
    "djangorestframework (==3.16.0)",
    "docutils (==0.21.2)",
    "drf-spectacular (==0.28.0)",
    "faker (==37.1.0)",
    "gunicorn (==23.0.0)",
    "jsonschema (==4.23.0)",
    "pillow (==11.1.0)",
    "sentry-sdk (==2.25.1)",
    "urllib3 (==2.3.0)",
    "django-debug-toolbar (==5.1.0)",
    "django-filter (==25.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
